feat: Refacto group and user
- remove group steamengine_app_user
- add user steamengine_app_user to group steamengine_project_user
- update steamengine binary to be owned by steamengine_project_user and
  review permission accordingly
- update steamengine_app_user and other extra users (apache, nginx, ...)
  to be member of group steamengine_project_user

--- a/tasks/common/runtime.yml
+++ b/tasks/common/runtime.yml
@@ -4,9 +4,9 @@
   ansible.builtin.template:
     src: "steamengine_wrapper.sh.j2"
     dest: "{{ steamengine_bin_path }}/steamengine"
-    owner: "root"
+    owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_project_user }}"
-    mode: 0750
+    mode: 0500
 
 - name: Create sudo configuration
   ansible.builtin.copy:
