--- a/tasks/static/runtime.yml
+++ b/tasks/static/runtime.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: "Add nginx user in {{ steamengine_app_user }} group"
+- name: "Add nginx user in {{ steamengine_project_user }} group"
   ansible.builtin.user:
     name: "{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}"
-    groups: "{{ steamengine_app_user }}"
+    groups: "{{ steamengine_project_user }}"
     append: true
   tags:
     - steamengine_runtime_static
