--- a/tasks/tomcat/runtime.yml
+++ b/tasks/tomcat/runtime.yml
@@ -12,10 +12,10 @@
   tags:
     - steamengine_runtime_tomcat
 
-- name: "Add nginx user in {{ steamengine_app_user }} group"
+- name: "Add nginx user in {{ steamengine_project_user }} group"
   ansible.builtin.user:
     name: "{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}"
-    groups: "{{ steamengine_app_user }}"
+    groups: "{{ steamengine_project_user }}"
     append: true
   tags:
     - steamengine_runtime_tomcat
