--- a/tasks/common/post_deploy.yml
+++ b/tasks/common/post_deploy.yml
@@ -5,7 +5,7 @@
     state: directory
     path: "{{ steamengine_persistent_base_path }}/{{ item.path }}"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rwx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
   loop: "{{ steamengine_persistent_directories }}"
@@ -25,7 +25,7 @@
     src: "{{ steamengine_persistent_base_path }}/{{ item.path }}"
     dest: "/{{ steamengine_project_name }}/{{ item.symlink_src }}"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rwx,o=
   when:
     - item.symlink_src is defined and item.symlink_src
