--- a/tasks/nodejs/runtime.yml
+++ b/tasks/nodejs/runtime.yml
@@ -44,3 +44,12 @@
   when: steamengine_nodejs_add_nginx_app_group
   tags:
     - steamengine_runtime_nodejs
+
+- name: "Add nginx user in additionnal group"
+  ansible.builtin.user:
+    name: "{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}"
+    groups: "{{ steamengine_project_user }}"
+    append: true
+  when: steamengine_nodejs_add_nginx_app_group && steamengine_additionnal_user_group is defined
+  tags:
+    - steamengine_runtime_nodejs
