--- a/tasks/nodejs/runtime.yml
+++ b/tasks/nodejs/runtime.yml
@@ -50,6 +50,6 @@
     name: "{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}"
     groups: "{{ steamengine_project_user }}"
     append: true
-  when: steamengine_nodejs_add_nginx_app_group && steamengine_additionnal_user_group is defined
+  when: steamengine_nodejs_add_nginx_app_group and steamengine_additionnal_user_group is defined
   tags:
     - steamengine_runtime_nodejs
