--- a/tasks/wordpress/deploy.yml
+++ b/tasks/wordpress/deploy.yml
@@ -12,7 +12,7 @@
     src: "{{ steamengine_conf_path }}/.env"
     dest: "{{ steamengine_conf_path }}/.env.backup"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rw,g=r,o=r
     remote_src: yes
   become: true
@@ -25,7 +25,7 @@
     src: wordpress.env.j2
     dest: "{{ steamengine_conf_path }}/.env"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rw,g=r,o=r
   tags:
     - steamengine_deploy_wp
@@ -36,7 +36,7 @@
     dest: "{{ steamengine_project_root_path }}/project.zip"
     checksum: "{{ checksum_verified }}"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rw,g=rw,o=
     headers: "{{ steamengine_build_url_headers }}"
     validate_certs: "{{ steamengine_build_url_validate_certs }}"
@@ -64,7 +64,7 @@
     path: "{{ steamengine_project_wordpress_new_release_path }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
   tags:
@@ -77,7 +77,7 @@
     remote_src: true
     list_files: true
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
   tags:
@@ -89,7 +89,7 @@
     dest: "{{ item.path }}"
     state: link
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rx,o=
   with_items: "{{ steamengine_project_wordpress_symlinks }}"
   when: new_build_to_deploy is defined and new_build_to_deploy
@@ -109,7 +109,7 @@
     path: "{{ steamengine_project_wordpress_current_release_path }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and not project_current_release_exist.stat.exists
   tags:
@@ -128,7 +128,7 @@
     path: "{{ steamengine_project_wordpress_old_release_path }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
   tags:
