--- a/tasks/wordpress/post_deploy_wp.yml
+++ b/tasks/wordpress/post_deploy_wp.yml
@@ -5,7 +5,7 @@
     state: directory
     path: "{{ steamengine_persistent_base_path }}/{{ item.path }}"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rwx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
   loop: "{{ steamengine_persistent_directories }}"
@@ -25,7 +25,7 @@
     src: "{{ steamengine_persistent_base_path }}/{{ item.path }}"
     dest: "{{ steamengine_project_wordpress_new_release_path }}/{{ item.symlink_src }}"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     mode: u=rwx,g=rwx,o=
   when:
     - item.symlink_src is defined and item.symlink_src
@@ -48,7 +48,7 @@
     src: "{{ steamengine_conf_path }}/.env.backup"
     dest: "{{ steamengine_project_wordpress_old_release_path }}/.env"
     owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
+    group: "{{ steamengine_project_user }}"
     remote_src: yes
     mode: u=rw,g=r,o=r
   become: true
