--- a/vars/symfony.yml
+++ b/vars/symfony.yml
@@ -51,7 +51,7 @@ steamengine_wrapper_scripts_base:
 
       find -L {{ steamengine_project_root_path_web }} \
         -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
-        -print0 | xargs -0 chown {{ steamengine_project_user }}:{{ steamengine_app_user }}
+        -print0 | xargs -0 chown {{ steamengine_project_user }}:{{ steamengine_project_user }}
 
       chmod -R 'u=rwx,g=rwx,o=' \
       {% for value in steamengine_sf_path_with_write_permission %}
